left-align quiz show dropdown items - order bug
links within the ember quiz show page should be left aligned. items in
the menu should be keyboard navigable and maintain order.

closes CNVS-13053

test plan:
  - enable ember quizzes
  - as instructor visit the quiz show page for a quiz
  - click on cog in top right corner
    - verify that items are left aligned within the dropdown
    - use keyboard arrows to move up and down the list
      - verify that selected item moves linearly through list

Reviewed-on: https://gerrit.instructure.com/34915
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Caleb Guanzon <cguanzon@instructure.com>
Product-Review: Jason Madsen <jmadsen@instructure.com>

--- a/app/stylesheets/ember_quizzes/show.scss
+++ b/app/stylesheets/ember_quizzes/show.scss
@@ -226,6 +226,7 @@
   ic-menu-list {
     top: 32px;
     right: 5px;
+    text-align: left;
   }
 
 }
